This is the file that the students will receive when starting exercise 4.

--- a/Food Tracker/Base.lproj/Main.storyboard
+++ b/Food Tracker/Base.lproj/Main.storyboard
@@ -51,12 +51,6 @@
                                     <action selector="pastaOrdered:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KRi-gn-duo"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blank Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="maQ-rG-sWw">
-                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6R2-pp-GlY">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="Red"/>
@@ -78,30 +72,44 @@
                                     <action selector="changeColorToWhite:" destination="BYZ-38-t0r" eventType="touchUpInside" id="43V-Lh-Ape"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6iy-dU-cto">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Next"/>
+                                <connections>
+                                    <segue destination="gu2-25-fIZ" kind="show" id="bDs-JZ-ENT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Jyk-7u-Xjv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="7e3-Un-j9h"/>
-                            <constraint firstItem="maQ-rG-sWw" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Blp-uh-DzX"/>
+                            <constraint firstItem="3je-ga-EAe" firstAttribute="baseline" secondItem="lE5-Oz-6ER" secondAttribute="baseline" id="BbM-GG-JaD"/>
                             <constraint firstItem="9HX-xn-frx" firstAttribute="top" secondItem="Jyk-7u-Xjv" secondAttribute="bottom" constant="30" id="CAG-kx-Xqp"/>
                             <constraint firstItem="9HX-xn-frx" firstAttribute="leading" secondItem="7r7-xs-5pP" secondAttribute="trailing" constant="50" id="CrP-SV-Hx0"/>
-                            <constraint firstItem="3je-ga-EAe" firstAttribute="top" secondItem="maQ-rG-sWw" secondAttribute="bottom" constant="80" id="EuM-At-kQM"/>
-                            <constraint firstItem="maQ-rG-sWw" firstAttribute="top" secondItem="9HX-xn-frx" secondAttribute="bottom" constant="80" id="HGu-YA-NeG"/>
                             <constraint firstItem="XjD-gZ-W33" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="L8Z-Lt-c3O"/>
                             <constraint firstItem="nIQ-Me-a2A" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Oxa-Qs-vhc"/>
-                            <constraint firstItem="lE5-Oz-6ER" firstAttribute="top" secondItem="maQ-rG-sWw" secondAttribute="bottom" constant="80" id="Plu-Ae-ieJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Jyk-7u-Xjv" secondAttribute="trailing" id="Qzt-eo-8Vq"/>
+                            <constraint firstItem="3je-ga-EAe" firstAttribute="baseline" secondItem="6R2-pp-GlY" secondAttribute="baseline" id="Vgq-ix-Scn"/>
+                            <constraint firstItem="6iy-dU-cto" firstAttribute="top" secondItem="3je-ga-EAe" secondAttribute="bottom" constant="30" id="Z7X-8K-On3">
+                                <variation key="heightClass=regular-widthClass=compact" constant="40"/>
+                            </constraint>
                             <constraint firstItem="6R2-pp-GlY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="b3j-YK-cis"/>
-                            <constraint firstItem="lE5-Oz-6ER" firstAttribute="leading" secondItem="6R2-pp-GlY" secondAttribute="trailing" constant="81" id="dLd-J5-wMk"/>
+                            <constraint firstItem="lE5-Oz-6ER" firstAttribute="leading" secondItem="6R2-pp-GlY" secondAttribute="trailing" constant="81" id="dLd-J5-wMk">
+                                <variation key="heightClass=regular-widthClass=compact" constant="79"/>
+                            </constraint>
                             <constraint firstAttribute="trailingMargin" secondItem="nIQ-Me-a2A" secondAttribute="trailing" id="dii-De-vmr"/>
                             <constraint firstItem="7r7-xs-5pP" firstAttribute="top" secondItem="Jyk-7u-Xjv" secondAttribute="bottom" constant="30" id="fAD-6h-RND"/>
-                            <constraint firstItem="maQ-rG-sWw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fPu-0F-Q8i"/>
-                            <constraint firstItem="6R2-pp-GlY" firstAttribute="top" secondItem="maQ-rG-sWw" secondAttribute="bottom" constant="80" id="gBU-Ec-6kV"/>
                             <constraint firstItem="XjD-gZ-W33" firstAttribute="top" secondItem="Jyk-7u-Xjv" secondAttribute="bottom" constant="30" id="kA3-eP-oYU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6iy-dU-cto" secondAttribute="trailing" id="kCS-rE-a6J">
+                                <variation key="heightClass=regular-widthClass=compact" constant="24"/>
+                            </constraint>
                             <constraint firstItem="nIQ-Me-a2A" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="m8S-Nn-9rw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6iy-dU-cto" secondAttribute="bottom" constant="319" id="o1p-pz-cT2"/>
                             <constraint firstItem="Jyk-7u-Xjv" firstAttribute="top" secondItem="nIQ-Me-a2A" secondAttribute="bottom" constant="30" id="ozb-HY-lEr"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3je-ga-EAe" secondAttribute="trailing" constant="30" id="q8B-gA-LBk"/>
-                            <constraint firstItem="3je-ga-EAe" firstAttribute="leading" secondItem="lE5-Oz-6ER" secondAttribute="trailing" constant="81" id="tZG-Ie-lMV"/>
+                            <constraint firstItem="3je-ga-EAe" firstAttribute="leading" secondItem="lE5-Oz-6ER" secondAttribute="trailing" constant="81" id="tZG-Ie-lMV">
+                                <variation key="heightClass=regular-widthClass=compact" constant="83"/>
+                            </constraint>
                             <constraint firstAttribute="trailingMargin" secondItem="9HX-xn-frx" secondAttribute="trailing" constant="30" id="wVz-Hd-agA"/>
                             <constraint firstItem="7r7-xs-5pP" firstAttribute="leading" secondItem="XjD-gZ-W33" secondAttribute="trailing" constant="50" id="x5F-lq-pEq"/>
                         </constraints>
@@ -112,10 +120,10 @@
                                 <exclude reference="XjD-gZ-W33"/>
                                 <exclude reference="7r7-xs-5pP"/>
                                 <exclude reference="9HX-xn-frx"/>
-                                <exclude reference="maQ-rG-sWw"/>
                                 <exclude reference="6R2-pp-GlY"/>
                                 <exclude reference="lE5-Oz-6ER"/>
                                 <exclude reference="3je-ga-EAe"/>
+                                <exclude reference="6iy-dU-cto"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="Oxa-Qs-vhc"/>
@@ -128,19 +136,18 @@
                                 <exclude reference="kA3-eP-oYU"/>
                                 <exclude reference="fAD-6h-RND"/>
                                 <exclude reference="x5F-lq-pEq"/>
-                                <exclude reference="Blp-uh-DzX"/>
-                                <exclude reference="HGu-YA-NeG"/>
-                                <exclude reference="fPu-0F-Q8i"/>
                                 <exclude reference="CAG-kx-Xqp"/>
                                 <exclude reference="CrP-SV-Hx0"/>
                                 <exclude reference="wVz-Hd-agA"/>
                                 <exclude reference="b3j-YK-cis"/>
-                                <exclude reference="gBU-Ec-6kV"/>
-                                <exclude reference="Plu-Ae-ieJ"/>
                                 <exclude reference="dLd-J5-wMk"/>
-                                <exclude reference="EuM-At-kQM"/>
+                                <exclude reference="BbM-GG-JaD"/>
+                                <exclude reference="Vgq-ix-Scn"/>
                                 <exclude reference="q8B-gA-LBk"/>
                                 <exclude reference="tZG-Ie-lMV"/>
+                                <exclude reference="Z7X-8K-On3"/>
+                                <exclude reference="kCS-rE-a6J"/>
+                                <exclude reference="o1p-pz-cT2"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -150,10 +157,10 @@
                                 <include reference="XjD-gZ-W33"/>
                                 <include reference="7r7-xs-5pP"/>
                                 <include reference="9HX-xn-frx"/>
-                                <include reference="maQ-rG-sWw"/>
                                 <include reference="6R2-pp-GlY"/>
                                 <include reference="lE5-Oz-6ER"/>
                                 <include reference="3je-ga-EAe"/>
+                                <include reference="6iy-dU-cto"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="Oxa-Qs-vhc"/>
@@ -166,24 +173,22 @@
                                 <include reference="kA3-eP-oYU"/>
                                 <include reference="fAD-6h-RND"/>
                                 <include reference="x5F-lq-pEq"/>
-                                <include reference="Blp-uh-DzX"/>
-                                <include reference="HGu-YA-NeG"/>
-                                <include reference="fPu-0F-Q8i"/>
                                 <include reference="CAG-kx-Xqp"/>
                                 <include reference="CrP-SV-Hx0"/>
                                 <include reference="wVz-Hd-agA"/>
                                 <include reference="b3j-YK-cis"/>
-                                <include reference="gBU-Ec-6kV"/>
-                                <include reference="Plu-Ae-ieJ"/>
                                 <include reference="dLd-J5-wMk"/>
-                                <include reference="EuM-At-kQM"/>
+                                <include reference="BbM-GG-JaD"/>
+                                <include reference="Vgq-ix-Scn"/>
                                 <include reference="q8B-gA-LBk"/>
                                 <include reference="tZG-Ie-lMV"/>
+                                <include reference="Z7X-8K-On3"/>
+                                <include reference="kCS-rE-a6J"/>
+                                <include reference="o1p-pz-cT2"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="blankLabel" destination="maQ-rG-sWw" id="GeC-j2-Qk4"/>
                         <outlet property="menuLabel" destination="Jyk-7u-Xjv" id="7s2-0E-x3Y"/>
                         <outlet property="titleLabel" destination="nIQ-Me-a2A" id="ymK-Hn-vjF"/>
                     </connections>
@@ -191,6 +196,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="439.5" y="334.5"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="HQt-ux-ZOh">
+            <objects>
+                <viewController id="gu2-25-fIZ" customClass="SecondViewController" customModule="Food_Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Pma-g2-sG9"/>
+                        <viewControllerLayoutGuide type="bottom" id="zLX-hi-iPl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="60Y-bQ-NdD">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blank Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Omo-8v-AMz">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gTa-wP-JSE">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Previous"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="DVA-8G-Yf6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gTa-wP-JSE" firstAttribute="leading" secondItem="60Y-bQ-NdD" secondAttribute="leadingMargin" id="6PH-7N-QfS"/>
+                            <constraint firstItem="gTa-wP-JSE" firstAttribute="top" secondItem="Omo-8v-AMz" secondAttribute="bottom" constant="350" id="KnJ-Do-tEL"/>
+                            <constraint firstItem="Omo-8v-AMz" firstAttribute="top" secondItem="Pma-g2-sG9" secondAttribute="bottom" constant="60" id="LcO-Nr-5Gx"/>
+                            <constraint firstItem="Omo-8v-AMz" firstAttribute="leading" secondItem="60Y-bQ-NdD" secondAttribute="leadingMargin" id="ZQd-lM-MYt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Omo-8v-AMz" secondAttribute="trailing" id="oRX-TJ-aY3"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="Omo-8v-AMz"/>
+                                <exclude reference="gTa-wP-JSE"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="LcO-Nr-5Gx"/>
+                                <exclude reference="ZQd-lM-MYt"/>
+                                <exclude reference="oRX-TJ-aY3"/>
+                                <exclude reference="6PH-7N-QfS"/>
+                                <exclude reference="KnJ-Do-tEL"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="Omo-8v-AMz"/>
+                                <include reference="gTa-wP-JSE"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="LcO-Nr-5Gx"/>
+                                <include reference="ZQd-lM-MYt"/>
+                                <include reference="oRX-TJ-aY3"/>
+                                <include reference="6PH-7N-QfS"/>
+                                <include reference="KnJ-Do-tEL"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="blankLabel" destination="Omo-8v-AMz" id="y1d-TW-B5h"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ui9-Cz-hSa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1131" y="330.75"/>
         </scene>
     </scenes>
 </document>
